--- a/sass/main.sass
+++ b/sass/main.sass
@@ -132,6 +132,7 @@ body
 		background: #fff
 
 .header_post_item
+	position: relative
 	max-width: 170px
 	padding-left: 45px
 	padding-right: 60px
@@ -139,6 +140,33 @@ body
 	&.active
 		background: #4b77be
 		z-index: 5
+		border-radius: 0
+	&:first-child.active
+		border-radius: 5px
+	&:last-child.active
+		border-radius: 5px
+	&:before 
+		position: absolute
+		content: ""
+		width: 100%
+		height: 5px
+		top: 0
+		left: 0
+		background: #4b77be
+	&.active:after 
+		position: absolute
+		top: 0
+		right: 0
+		content: ""
+		width: 5px
+		height: 100%
+		background: #4b77be
+	&.active:last-child:after
+		left: 0
+	&:hover .post_item_category
+		color: #a5a5b9
+	&:hover .post_item_text
+		color: #a5a5b9
 
 .post_item_category 
 	display: inline-block
@@ -150,6 +178,36 @@ body
 	text-transform: uppercase
 	margin-top: 25px
 
+/* Block - News*/
+.news_posts 
+	margin-top: 35px
+
+.news_post_item
+	position: relative
+	background: #fff
+	border-radius: 5px
+	width: 33%
+	&:hover
+		background: #38383a
+	&:hover .news_post_pic:after
+		background: #38383a
+
+.news_post_pic
+	position: relative
+	border-radius: 5px
+	&:after 
+		position: absolute
+		content: ""
+		left: 0
+		bottom: 4px
+		width: 100%
+		height: 5px
+		background: #fff
+
+.news_post_img
+	width: 100%
+	border-radius: 5px
+
 .post_item_text
 	color: #38383a
 	font-family: Merriweather
@@ -157,3 +215,36 @@ body
 	font-weight: 700
 	line-height: 26px
 	padding-bottom: 10px
+
+.post_category
+	position: absolute
+	top: 30px
+	left: 38px
+	color: white
+	font-family: MerriweatherSans
+	font-size: 12px
+	font-weight: 400
+	line-height: 26px
+	padding: 2px 8px
+	border-radius: 5px
+	text-transform: uppercase
+
+.country 
+	background: #26a65b
+
+.news_post_descr
+	display: flex
+	flex-direction: column
+	align-items: center
+	max-height: 235px
+
+.news_post_title
+	max-width: 265px
+
+.news_post_text
+	max-width: 265px
+
+.news_post_info
+	display: flex
+	width: 100%
+	justify-content: space-around
