--- a/pug/content.pug
+++ b/pug/content.pug
@@ -35,4 +35,15 @@
 					li.header_post_item 
 						span.post_item_category EDUCATION
 						p.post_item_text What I Will Fret Over 
-			
+		.news_posts
+			.news_post_item
+				.news_post_pic
+					img.news_post_img(src="img/content/country.jpg")
+				span.post_category.country country
+				.news_post_descr
+					h3.news_post_title 12 photos Indonesian beauty  in your eyes
+					p.news_post_text This is the reaction of many people is often asked when visiting a variety...
+					.news_post_info
+						a(href="#").news_post_link Read more
+						.news_post_comment 12
+						.news_post_like
