--- a/pug/content.pug
+++ b/pug/content.pug
@@ -36,14 +36,30 @@
 						span.post_item_category EDUCATION
 						p.post_item_text What I Will Fret Over 
 		.news_posts
-			.news_post_item
+			.news_post_item.post_sm
 				.news_post_pic
 					img.news_post_img(src="img/content/country.jpg")
 				span.post_category.country country
 				.news_post_descr
-					h3.news_post_title 12 photos Indonesian beauty  in your eyes
-					p.news_post_text This is the reaction of many people is often asked when visiting a variety...
+					h3.news_post_title.title_sm 12 photos Indonesian beauty  in your eyes
+					p.news_post_text.text_sm This is the reaction of many people is often asked when visiting a variety...
 					.news_post_info
 						a(href="#").news_post_link Read more
-						.news_post_comment 12
+						.news_post_comment 
+							i.fa.fa-commenting-o.news_comment 
+							span 12
 						.news_post_like
+							i.fa.fa-heart-o
+			.news_post_item.post_big.post_people
+				span.post_category.people People
+				.news_post_descr.post_descr_big
+					h3.news_post_title.title_big Ridwan Kamil role in Success  Story Organizing Surabaya 
+					p.news_post_text.text_big Bandung many people skeptical and apathetic towards revamping the city of Bandung with all tangled Problems. Though if you want a little to learn from the neighboring town...
+					img(src="img/content/people.png").people_img
+				.news_post_info.post_info_big
+						a(href="#").news_post_link Read more
+						.news_post_comment 
+							i.fa.fa-commenting-o.news_comment 
+							span 12
+						.news_post_like
+							i.fa.fa-heart-o
