--- a/sass/main.sass
+++ b/sass/main.sass
@@ -181,25 +181,47 @@ body
 /* Block - News*/
 .news_posts 
 	margin-top: 35px
+	display: flex
+	justify-content: space-between
+	flex-wrap: wrap
 
 .news_post_item
 	position: relative
 	background: #fff
+	max-height: 420px
 	border-radius: 5px
-	width: 33%
+	margin-bottom: 35px
+
+.post_sm
+	width: 31%
 	&:hover
 		background: #38383a
 	&:hover .news_post_pic:after
 		background: #38383a
+	&:hover .news_post_title
+		color: #fff
+	&:hover .news_post_text
+		color: #fff
+	&:hover .news_post_link
+		color: #fff
+		border-color: rgba(255,255,255,0.2)
+	&:hover .news_post_comment
+		border-color: rgba(255,255,255,0.2)
+		color: #fff
+	&:hover .news_post_like .fa-heart-o
+		color: #fff
+		border-color: rgba(255,255,255,0.2)
 
 .news_post_pic
 	position: relative
 	border-radius: 5px
+	height: 185px
+	overflow: hidden
 	&:after 
 		position: absolute
 		content: ""
 		left: 0
-		bottom: 4px
+		bottom: 0px
 		width: 100%
 		height: 5px
 		background: #fff
@@ -228,23 +250,114 @@ body
 	padding: 2px 8px
 	border-radius: 5px
 	text-transform: uppercase
+	letter-spacing: 4px
 
 .country 
 	background: #26a65b
+.people
+	background: #e52a40
 
 .news_post_descr
 	display: flex
 	flex-direction: column
 	align-items: center
-	max-height: 235px
+	// max-height: 235px
 
 .news_post_title
-	max-width: 265px
+	color: #38383a
+	font-family: Merriweather
+	font-size: 18px
+	font-weight: 700
+	line-height: 26px
+	margin: 0
+	margin-top: 25px
+	&.title_sm
+		max-width: 265px
 
 .news_post_text
-	max-width: 265px
+	color: #656565
+	font-family: Merriweather
+	font-size: 14px
+	font-weight: 400
+	line-height: 26px
+	margin-bottom: 15px
+	&.text_sm
+		max-width: 265px
 
 .news_post_info
 	display: flex
 	width: 100%
-	justify-content: space-around
+	border-top: 1px solid #cccccc
+	padding-top: 20px
+	margin-bottom: 15px
+
+.news_post_link
+	color: #2e2e30
+	font-family: MerriweatherSans
+	font-size: 12px
+	font-weight: 400
+	line-height: 26px
+	letter-spacing: 4px
+	text-transform: uppercase
+	text-decoration: none
+	padding: 5px 15px
+	border: 1px solid rgba(0, 0, 0, 0.4)
+	border-radius: 25px
+	margin-left: 35px
+	&:hover
+		opacity: .7
+
+.news_post_comment
+	color: #2e2e30
+	font-family: MerriweatherSans
+	font-size: 14px
+	font-weight: 400
+	line-height: 26px
+	padding: 5px 15px
+	padding-left: 25px
+	margin-left: 15px
+	border: 1px solid rgba(0, 0, 0, 0.4)
+	border-radius: 20px
+	cursor: pointer
+	&:hover
+		opacity: .7
+
+.fa-commenting-o:before
+	margin-right: 5px
+	font-size: 17px
+	margin-left: -6px
+
+.news_post_like
+	& .fa-heart-o
+		border: 1px solid rgba(0, 0, 0, 0.4)
+		border-radius: 20px
+		padding: 10px
+		margin-left: 15px
+		cursor: pointer
+	&:hover
+		opacity: .7
+
+.post_big
+	width: 66%
+
+.post_descr_big
+	align-items: flex-start
+	margin-left: 40px
+	max-height: 365px
+
+.title_big 
+	max-width: 320px
+	margin-top: 120px
+
+.text_big
+	max-width: 390px
+
+.post_info_big
+	border: none
+	padding: 0
+	margin-top: 55px
+
+.people_img
+	position: absolute
+	top: 95px
+	right: 35px
