--- a/pug/content.pug
+++ b/pug/content.pug
@@ -60,6 +60,34 @@
 						a(href="#").news_post_link Read more
 						.news_post_comment 
 							i.fa.fa-commenting-o.news_comment 
+							span 34
+						.news_post_like
+							i.fa.fa-heart-o
+			.news_post_item.post_sm
+				.news_post_pic
+					img.news_post_img(src="img/content/travel.jpg")
+				span.post_category.travel travel
+				.news_post_descr
+					h3.news_post_title.title_sm This 10 Country Beautiful  Non-Asean Free Visa
+					p.news_post_text.text_sm When they wanted to travel but are reluctant to arrange a visa is a..
+					.news_post_info
+						a(href="#").news_post_link Read more
+						.news_post_comment 
+							i.fa.fa-commenting-o.news_comment 
+							span 30
+						.news_post_like
+							i.fa.fa-heart-o
+			.news_post_item.post_sm
+				.news_post_pic
+					img.news_post_img(src="img/content/travel.jpg")
+				span.post_category.technology technology
+				.news_post_descr
+					h3.news_post_title.title_sm Important Tips on Buying a  New Mobile-Based Android
+					p.news_post_text.text_sm Newly purchased device did many advantages, especially those...
+					.news_post_info
+						a(href="#").news_post_link Read more
+						.news_post_comment 
+							i.fa.fa-commenting-o.news_comment 
 							span 12
 						.news_post_like
 							i.fa.fa-heart-o
