--- a/sass/main.sass
+++ b/sass/main.sass
@@ -228,7 +228,6 @@ body
 
 .news_post_img
 	width: 100%
-	border-radius: 5px
 
 .post_item_text
 	color: #38383a
@@ -256,6 +255,10 @@ body
 	background: #26a65b
 .people
 	background: #e52a40
+.travel
+	background: #663399
+.technology
+	background: #e87e04
 
 .news_post_descr
 	display: flex
