--- a/index.pug
+++ b/index.pug
@@ -7,3 +7,8 @@ html(lang='ru')
 		include pug/content
 
 		include pug/footer
+
+		script(src="https://code.jquery.com/jquery-2.2.4.min.js" defer)
+		script(src="js/slick/slick.js" defer)
+		script(src="js/common.js" defer)
+		
