--- a/pug/content.pug
+++ b/pug/content.pug
@@ -13,7 +13,7 @@
 					p.header_post_text For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life, for better or for worse.
 					a(href="#").header_post_link Read more
 				.header_post_descr
-					span.header_post_category TECHNOLOGY
+					span.header_post_category.technology TECHNOLOGY
 					h2.header_post_title How to Design for  Virtual Reality
 					p.header_post_text For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life, for better or for worse.
 					a(href="#").header_post_link Read more
@@ -91,3 +91,19 @@
 							span 12
 						.news_post_like
 							i.fa.fa-heart-o
+			.news_post_item.post_sm
+				span.post_category.economy Economy
+				.news_post_descr
+					h3.news_post_title.title_no_pic.title_sm Four Pillars Decide  Fate of Economy Indonesia
+					p.news_post_text.text_no_pic.text_sm The domestic economy is still faced with a number of structural challenges. To achieve sustain...
+					.news_post_info
+						a(href="#").news_post_link Read more
+						.news_post_comment 
+							i.fa.fa-commenting-o.news_comment 
+							span 02
+						.news_post_like
+							i.fa.fa-heart-o
+			.news_post_item.post_sm.slick_slider
+					
+				
+
