--- a/pug/head.pug
+++ b/pug/head.pug
@@ -14,9 +14,9 @@ head
 
   // Load Styles
   link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
-  script(src="https://code.jquery.com/jquery-2.2.4.min.js")
-  script(src="js/common.js")
   link(rel='stylesheet', href='css/normalize.css')
+  link(rel='stylesheet', href='js/slick/slick.css')
+  link(rel='stylesheet', href='js/slick/slick-theme.css')
   link(rel='stylesheet', href='css/main.css')
 
   // Mixins
