--- a/sass/main.sass
+++ b/sass/main.sass
@@ -259,6 +259,13 @@ body
 	background: #663399
 .technology
 	background: #e87e04
+.economy 
+	background: #e74c3c
+	left: 125px
+.decor 
+	background: #4183d7
+	top: 185px
+	left: 20px
 
 .news_post_descr
 	display: flex
@@ -311,7 +318,7 @@ body
 		opacity: .7
 
 .news_post_comment
-	color: #2e2e30
+	color: #878787
 	font-family: MerriweatherSans
 	font-size: 14px
 	font-weight: 400
@@ -332,6 +339,7 @@ body
 
 .news_post_like
 	& .fa-heart-o
+		color: #878787
 		border: 1px solid rgba(0, 0, 0, 0.4)
 		border-radius: 20px
 		padding: 10px
@@ -364,3 +372,33 @@ body
 	position: absolute
 	top: 95px
 	right: 35px
+
+.title_no_pic
+	margin-top: 110px
+	width: 210px
+	text-align: center
+
+.text_no_pic
+	text-align: center
+	margin-bottom: 60px
+
+.post_descr_full
+	position: absolute
+	top: 230px
+
+.title_full
+	color: #fff
+
+
+.post_info_full
+	border: none
+	.news_post_link
+		color: #fff
+		border-color: #fff
+	.news_post_comment 
+		border-color: #fff
+		color: #fff
+	.news_post_like .fa-heart-o
+		border-color: #fff
+		color: #fff
+
