--- a/pug/content.pug
+++ b/pug/content.pug
@@ -8,19 +8,19 @@
 					p.header_post_text For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life, for better or for worse.
 					a(href="#").header_post_link Read more
 				.header_post_descr
-					span.header_post_category SCIENCE
+					span.header_post_category.science science
 					h2.header_post_title Value-Based Care‘s Data Problem
 					p.header_post_text For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life, for better or for worse.
 					a(href="#").header_post_link Read more
 				.header_post_descr
-					span.header_post_category.technology TECHNOLOGY
+					span.header_post_category.technology technology
 					h2.header_post_title How to Design for  Virtual Reality
-					p.header_post_text For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life, for better or for worse.
+					p.header_post_text For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life.
 					a(href="#").header_post_link Read more
 				.header_post_descr
-					span.header_post_category EDUCATION
+					span.header_post_category.education education
 					h2.header_post_title What I Will Fret Over 
-					p.header_post_text For many it means that you’re no longer in the hard-partying, bad decision-making stage of your life, for better or for worse.
+					p.header_post_text For many it means that you’re no longer in the hard-partying.
 					a(href="#").header_post_link Read more
 			ul.header_post_info
 					li.header_post_item.active
@@ -103,7 +103,50 @@
 							span 02
 						.news_post_like
 							i.fa.fa-heart-o
-			.news_post_item.post_sm.slick_slider
-					
+			.news_post_item.post_sm
+				.post_slider_bg
+					//- .post_category.decor home & decor
+					.slick_slider
+						.post_slider_descr
+							.post_category.decor home & decor
+							h3.news_post_title 10 Caring for plants in the  courtyard house
+							.news_post_info.post_info_full
+								a(href="#").news_post_link Read more
+								.news_post_comment 
+									i.fa.fa-commenting-o.news_comment 
+									span 02
+								.news_post_like
+									i.fa.fa-heart-o
+						.post_slider_descr
+							.post_category.decor home & decor
+							h3.news_post_title plants in the courtyard house
+							.news_post_info.post_info_full
+								a(href="#").news_post_link Read more
+								.news_post_comment 
+									i.fa.fa-commenting-o.news_comment 
+									span 25
+								.news_post_like
+									i.fa.fa-heart-o
+						.post_slider_descr
+							.post_category.decor home & decor
+							h3.news_post_title 10 Caring for plants in the  courtyard house
+							.news_post_info.post_info_full
+								a(href="#").news_post_link Read more
+								.news_post_comment 
+									i.fa.fa-commenting-o.news_comment 
+									span 17
+								.news_post_like
+									i.fa.fa-heart-o
+						.post_slider_descr
+							.post_category.decor home & decor
+							h3.news_post_title plants in the  courtyard house
+							.news_post_info.post_info_full
+								a(href="#").news_post_link Read more
+								.news_post_comment 
+									i.fa.fa-commenting-o.news_comment 
+									span 9
+								.news_post_like
+									i.fa.fa-heart-o
+
 				
 
