--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,8 @@ body {
 }
 
 .header_post_link {
+  position: fixed;
+  top: 540px;
   text-decoration: none;
   text-transform: uppercase;
   padding: 6px 21px;
@@ -415,6 +417,10 @@ body {
   background: #26a65b;
 }
 
+.science {
+  background: #8e333e;
+}
+
 .people {
   background: #e52a40;
 }
@@ -427,6 +433,10 @@ body {
   background: #e87e04;
 }
 
+.education {
+  background: #3be96c;
+}
+
 .economy {
   background: #e74c3c;
   left: 125px;
@@ -434,7 +444,10 @@ body {
 
 .decor {
   background: #4183d7;
-  top: 185px;
+  position: relative;
+  display: inline-block;
+  width: 140px;
+  top: -40px;
   left: 20px;
 }
 
@@ -622,4 +635,66 @@ body {
 .post_info_full .news_post_like .fa-heart-o {
   border-color: #fff;
   color: #fff;
+}
+
+.slick_slider {
+  height: 420px;
+  background: none;
+  outline: none;
+  position: relative;
+}
+
+.post_slider_bg {
+  position: relative;
+  background: url(../img/content/home.jpg) center center;
+  background-size: 110%;
+  height: 100%;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
+
+.post_slider_descr {
+  padding-top: 200px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.post_slider_descr .news_post_title {
+  color: #fff;
+  width: 230px;
+  margin-left: 20px;
+}
+
+.post_info_full {
+  margin-top: 40px;
+}
+
+.post_info_full .news_post_link {
+  margin-left: 20px;
+}
+
+.slick-dots {
+  bottom: 80px;
+}
+
+.slick-dots li {
+  left: -95px;
+}
+
+.slick-dots li button:before {
+  font-size: 20px;
+  color: #fff;
+  opacity: .5;
+}
+
+.slick-dots li.slick-active button:before {
+  color: #fff;
+  opacity: 1;
 }
