--- a/pug/content.pug
+++ b/pug/content.pug
@@ -105,7 +105,6 @@
 							i.fa.fa-heart-o
 			.news_post_item.post_sm
 				.post_slider_bg
-					//- .post_category.decor home & decor
 					.slick_slider
 						.post_slider_descr
 							.post_category.decor home & decor
@@ -146,7 +145,13 @@
 									i.fa.fa-commenting-o.news_comment 
 									span 9
 								.news_post_like
-									i.fa.fa-heart-o
-
-				
+									i.fa.fa-heart-o 
+			.accordeon
+				h3.accordeon_title Newest post
+				.accordeon_item.active
+					.accordeon_category Travel
+					h3.accordeon_item_title Similar exist Painting Mysterious Alien in  America
+					p.accordeon_item_text Name Sego Canyon in the US has not been as popular as the Grand Canyon. 
+					.accordeon_item_pic
+						img.accordeon_item_img(src="img/content/canyon.jpg")
 
