--- a/css/main.css
+++ b/css/main.css
@@ -333,6 +333,7 @@ body {
 
 .post_sm {
   width: 31%;
+  height: 420px;
 }
 
 .post_sm:hover {
@@ -439,7 +440,7 @@ body {
 
 .economy {
   background: #e74c3c;
-  left: 125px;
+  left: 120px;
 }
 
 .decor {
@@ -688,8 +689,13 @@ body {
   left: -95px;
 }
 
+.slick-dots li button {
+  width: 10px;
+  height: 10px;
+}
+
 .slick-dots li button:before {
-  font-size: 20px;
+  font-size: 10px;
   color: #fff;
   opacity: .5;
 }
@@ -697,4 +703,75 @@ body {
 .slick-dots li.slick-active button:before {
   color: #fff;
   opacity: 1;
+}
+
+.accordeon {
+  background: #fff;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  width: 65.5%;
+  height: 420px;
+  background: #fff;
+}
+
+.accordeon_item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  height: 200px;
+  padding-top: 20px;
+  padding-left: 35px;
+}
+
+.accordeon_item.active {
+  background: #f2f1f1;
+}
+
+.accordeon_title {
+  color: #2e2e30;
+  font-family: MerriweatherSans Bold;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 35px 0;
+  padding-left: 35px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.accordeon_category {
+  text-transform: uppercase;
+  color: #2e2e30;
+  font-family: MerriweatherSans;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.accordeon_item_title {
+  max-width: 370px;
+  color: #38383a;
+  font-family: Merriweather Bold;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+}
+
+.accordeon_item_text {
+  max-width: 390px;
+  color: #656565;
+  font-family: Merriweather;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 26px;
 }
