--- a/sass/main.sass
+++ b/sass/main.sass
@@ -196,6 +196,7 @@ body
 
 .post_sm
 	width: 31%
+	height: 420px
 	&:hover
 		background: #38383a
 	&:hover .news_post_pic:after
@@ -267,7 +268,7 @@ body
 	background: #3be96c
 .economy 
 	background: #e74c3c
-	left: 125px
+	left: 120px
 .decor 
 	background: #4183d7
 	position: relative
@@ -442,11 +443,70 @@ body
 .slick-dots li 
 	left: -95px
 
+.slick-dots li button
+	width: 10px
+	height: 10px
+
 .slick-dots li button:before
-	font-size: 20px
+	font-size: 10px
 	color: #fff
 	opacity: .5
 
 .slick-dots li.slick-active button:before
 	color: #fff
 	opacity: 1
+
+.accordeon
+	background: #fff
+	border-radius: 5px
+	width: 65.5%
+	height: 420px
+	background: #fff
+
+.accordeon_item
+	display: flex
+	flex-direction: column
+	flex-wrap: wrap
+	height: 200px
+	padding-top: 20px
+	padding-left: 35px
+	
+.accordeon_item.active
+	background: #f2f1f1
+
+.accordeon_title
+	color: #2e2e30
+	font-family: MerriweatherSans Bold
+	font-size: 12px
+	font-weight: 700
+	line-height: 26px
+	text-transform: uppercase
+	margin: 0
+	padding: 35px 0
+	padding-left: 35px
+	border-bottom: 1px solid rgba(0, 0, 0, 0.5)
+
+.accordeon_category
+	text-transform: uppercase
+	color: #2e2e30
+	font-family: MerriweatherSans
+	font-size: 12px
+	font-weight: 400
+	line-height: 26px
+
+.accordeon_item_title
+	max-width: 370px
+	color: #38383a
+	font-family: Merriweather Bold
+	font-size: 18px
+	font-weight: 700
+	line-height: 26px
+
+.accordeon_item_text
+	max-width: 390px
+	color: #656565
+	font-family: Merriweather
+	font-size: 14px
+	font-weight: 400
+	line-height: 26px
+
