--- a/sass/main.sass
+++ b/sass/main.sass
@@ -464,15 +464,12 @@ body
 	background: #fff
 
 .accordeon_item
+	position: relative
 	display: flex
-	flex-direction: column
+	flex-direction: row
 	flex-wrap: wrap
-	height: 200px
-	padding-top: 20px
-	padding-left: 35px
-	
-.accordeon_item.active
-	background: #f2f1f1
+	padding-top: 15px
+	padding-left: 30px
 
 .accordeon_title
 	color: #2e2e30
@@ -481,8 +478,9 @@ body
 	font-weight: 700
 	line-height: 26px
 	text-transform: uppercase
+	letter-spacing: 2px
 	margin: 0
-	padding: 35px 0
+	padding: 25px 0
 	padding-left: 35px
 	border-bottom: 1px solid rgba(0, 0, 0, 0.5)
 
@@ -493,20 +491,65 @@ body
 	font-size: 12px
 	font-weight: 400
 	line-height: 26px
+	letter-spacing: 2px
 
 .accordeon_item_title
-	max-width: 370px
 	color: #38383a
 	font-family: Merriweather Bold
 	font-size: 18px
 	font-weight: 700
 	line-height: 26px
+	white-space: nowrap
+	overflow: hidden
+	text-overflow: ellipsis
+	margin: 0
+	margin-left: 40px
+
+.on_category_big
+	margin-left: 18px
 
 .accordeon_item_text
-	max-width: 390px
+	display: none
+	max-width: 400px
 	color: #656565
 	font-family: Merriweather
 	font-size: 14px
 	font-weight: 400
 	line-height: 26px
+	margin: 0
+	margin-top: 10px
 
+.accordeon_item_pic
+	display: none
+	border-radius: 5px
+	overflow: hidden
+	width: 202px
+	height: 146px
+
+.accordeon_arrow
+	width: 5px
+	height: 10px
+	position: absolute
+	top: 20px
+	right: 30px
+	&:after
+		content: "\f105"
+		font-family: FontAwesome
+		color: #6f6f6f
+
+/*Acccordeon active*/
+
+.accordeon_item.active
+	flex-direction: column
+	height: 200px
+	background: #f2f1f1
+	& .accordeon_item_title
+		max-width: 370px
+		margin-top: 10px
+		margin-left: 0
+		white-space: normal
+		overflow: visible
+	& .accordeon_item_text
+		display: block
+	& .accordeon_item_pic
+		display: block
