--- a/css/main.css
+++ b/css/main.css
@@ -715,25 +715,21 @@ body {
 }
 
 .accordeon_item {
+  position: relative;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  height: 200px;
-  padding-top: 20px;
-  padding-left: 35px;
-}
-
-.accordeon_item.active {
-  background: #f2f1f1;
+  padding-top: 15px;
+  padding-left: 30px;
 }
 
 .accordeon_title {
@@ -743,8 +739,9 @@ body {
   font-weight: 700;
   line-height: 26px;
   text-transform: uppercase;
+  letter-spacing: 2px;
   margin: 0;
-  padding: 35px 0;
+  padding: 25px 0;
   padding-left: 35px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
@@ -756,22 +753,85 @@ body {
   font-size: 12px;
   font-weight: 400;
   line-height: 26px;
+  letter-spacing: 2px;
 }
 
 .accordeon_item_title {
-  max-width: 370px;
   color: #38383a;
   font-family: Merriweather Bold;
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0;
+  margin-left: 40px;
+}
+
+.on_category_big {
+  margin-left: 18px;
 }
 
 .accordeon_item_text {
-  max-width: 390px;
+  display: none;
+  max-width: 400px;
   color: #656565;
   font-family: Merriweather;
   font-size: 14px;
   font-weight: 400;
   line-height: 26px;
+  margin: 0;
+  margin-top: 10px;
+}
+
+.accordeon_item_pic {
+  display: none;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  overflow: hidden;
+  width: 202px;
+  height: 146px;
+}
+
+.accordeon_arrow {
+  width: 5px;
+  height: 10px;
+  position: absolute;
+  top: 20px;
+  right: 30px;
+}
+
+.accordeon_arrow:after {
+  content: "\f105";
+  font-family: FontAwesome;
+  color: #6f6f6f;
+}
+
+/*Acccordeon active*/
+
+.accordeon_item.active {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  height: 200px;
+  background: #f2f1f1;
+}
+
+.accordeon_item.active .accordeon_item_title {
+  max-width: 370px;
+  margin-top: 10px;
+  margin-left: 0;
+  white-space: normal;
+  overflow: visible;
+}
+
+.accordeon_item.active .accordeon_item_text {
+  display: block;
+}
+
+.accordeon_item.active .accordeon_item_pic {
+  display: block;
 }
