--- a/pug/content.pug
+++ b/pug/content.pug
@@ -150,7 +150,20 @@
 				h3.accordeon_title Newest post
 				.accordeon_item.active
 					.accordeon_category Travel
-					h3.accordeon_item_title Similar exist Painting Mysterious Alien in  America
+					h3.accordeon_item_title Similar exist Painting Mysterious Alien in America
+					p.accordeon_item_text Name Sego Canyon in the US has not been as popular as the Grand Canyon. 
+					.accordeon_item_pic
+						img.accordeon_item_img(src="img/content/canyon.jpg")
+				.accordeon_item
+					.accordeon_category LIFESTYLE
+					h3.accordeon_item_title.on_category_big This Secret Branded Goods Shopping Deals New York
+					p.accordeon_item_text Name Sego Canyon in the US has not been as popular as the Grand Canyon. 
+					.accordeon_item_pic
+						img.accordeon_item_img(src="img/content/canyon.jpg")
+				.accordeon_item
+					.accordeon_category Travel
+					h3.accordeon_item_title The Three Colors Beach in Malang!
+					span.accordeon_arrow 
 					p.accordeon_item_text Name Sego Canyon in the US has not been as popular as the Grand Canyon. 
 					.accordeon_item_pic
 						img.accordeon_item_img(src="img/content/canyon.jpg")
