--- a/pug/content.pug
+++ b/pug/content.pug
@@ -169,4 +169,7 @@
 					p.accordeon_item_text Name Sego Canyon in the US has not been as popular as the Grand Canyon. 
 					.accordeon_item_pic
 						img.accordeon_item_img(src="img/content/canyon.jpg")
+		.load_more
+			a.load_more_link(href="#") Load More
+
 
