--- a/sass/main.sass
+++ b/sass/main.sass
@@ -195,7 +195,7 @@ body
 	margin-bottom: 35px
 
 .post_sm
-	width: 31%
+	width: 341px
 	height: 420px
 	&:hover
 		background: #38383a
@@ -358,7 +358,7 @@ body
 		opacity: .7
 
 .post_big
-	width: 66%
+	width: 721px
 
 .post_descr_big
 	align-items: flex-start
@@ -459,7 +459,7 @@ body
 .accordeon
 	background: #fff
 	border-radius: 5px
-	width: 65.5%
+	width: 721px
 	height: 420px
 	background: #fff
 	overflow: hidden
