--- a/pug/header.pug
+++ b/pug/header.pug
@@ -3,7 +3,8 @@ header.header
 		nav.navigation
 			.logo
 				a.logo_link(href="#") Media
-			ul.nav_menu
+			a.mob_menu(href="#")
+			ul.nav_menu.active
 				li
 					a.nav_menu_link(href="#") Home
 				li
