--- a/pug/head.pug
+++ b/pug/head.pug
@@ -18,6 +18,7 @@ head
   link(rel='stylesheet', href='js/slick/slick.css')
   link(rel='stylesheet', href='js/slick/slick-theme.css')
   link(rel='stylesheet', href='css/main.css')
+  link(rel='stylesheet', href='css/media.css')
 
   // Mixins
   include bemto/bemto
