--- a/sass/main.sass
+++ b/sass/main.sass
@@ -12,6 +12,7 @@ body
 .navigation
 	display: flex
 	justify-content: space-between
+	position: relative
 
 .logo_link
 	display: inline-block
@@ -33,21 +34,41 @@ body
 	list-style: none
 	background: #38383a
 	border-radius: 5px
-	li 
-		margin: 20px
 
 .nav_menu_link
+	display: inline-block
 	text-decoration: none
 	color: #888
 	font-family: MerriweatherSans
 	font-size: 13px
 	line-height: 26px
 	font-weight: 400
-	padding: 20px 15px
+	padding: 20px 35px
 	margin: 0 5px
 		
 .nav_menu_link:hover
 	color: #fff
+
+.mob_menu
+	position: absolute
+	display: none
+	top: 18px
+	right: 10px
+	width: 30px
+	height: 30px
+	background: linear-gradient(to bottom, black, black 20%, white 20%, white 40%, black 40%, black 60%, white 60%, white 80%, black 80%, black 100%)
+	outline: 1px solid white
+
+.nav_menu.active
+	position: absolute
+	top: 50px
+	right: 10px
+	display: flex
+	flex-direction: column
+	z-index: 1
+	& .nav_menu_link
+		padding: 30px 80px
+		font-size: 28px
 
 .content
 	margin-top: 35px
@@ -97,8 +118,8 @@ body
 	line-height: 1.62
 
 .header_post_link
-	position: fixed
-	top: 540px
+	position: absolute
+	bottom: -60px
 	text-decoration: none
 	text-transform: uppercase
 	padding: 6px 21px
@@ -197,6 +218,8 @@ body
 .post_sm
 	width: 341px
 	height: 420px
+	margin-right: 7px
+	margin-left: 7px
 	&:hover
 		background: #38383a
 	&:hover .news_post_pic:after
