--- a/pug/header.pug
+++ b/pug/header.pug
@@ -4,7 +4,7 @@ header.header
 			.logo
 				a.logo_link(href="#") Media
 			a.mob_menu(href="#")
-			ul.nav_menu.active
+			ul.nav_menu
 				li
 					a.nav_menu_link(href="#") Home
 				li
