--- a/sass/media.sass
+++ b/sass/media.sass
@@ -37,6 +37,10 @@
 	.nav_menu
 		display: none
 
+@media only screen and (max-width:660px)
+	.accordeon_item_img
+		display: none
+
 @media only screen and (max-width:615px)
 	.header_post_descr
 		left: 20px
@@ -44,7 +48,14 @@
 		margin-top: 5px
 	.post_item_text
 		padding-bottom: 0
-
+	.accordeon_item
+		padding-left: 10px
+	.accordeon_item_title
+		margin-left: 28px
+	.on_category_big 
+		margin-left: 5px
+	.accordeon_arrow
+		right: 15px
 
 @media only screen and (max-width:580px)
 	.header_post_category
@@ -53,6 +64,59 @@
 		font-size: 28px
 	.header_post_text
 		font-size: 13px
-@media only screen and (max-width:481px)
+	.people_img
+		display: none
 
-@media only screen and (max-width:320px)
+@media only screen and (max-width:555px)
+	.accordeon_arrow
+		right: 5px
+
+@media only screen and (max-width:510px)
+	.header_post_title
+		max-width: 370px
+	.accordeon_item
+		justify-content: center
+		height: 40px
+	.header_post_info:after
+		height: 6px
+	.accordeon_item_title
+		margin-left: 35px
+	.accordeon_arrow
+		display: none
+
+@media only screen and (max-width:480px)
+	.header_post_text
+		max-width: 390px
+
+@media only screen and (max-width:450px)
+	.header_post_title
+		font-size: 24px
+	.header_post_text
+		max-width: 400px
+	.accordeon_item
+		padding: 10px 5px
+
+@media only screen and (max-width:425px)
+	.header_post_title
+		max-width: 250px
+	.header_post_text
+		max-width: 310px
+
+	.accordeon_item_text
+		max-width: 390px
+
+@media only screen and (max-width:400px)
+	.accordeon_item_text
+		max-width: 300px
+
+@media only screen and (max-width:382px)
+	.post_info_big
+		margin-top: 40px
+
+@media only screen and (max-width:374px)
+	.header_post
+		display: none
+
+@media only screen and (max-width:370px)
+	.accordeon_item.active .accordeon_item_title
+		max-width: 300px
