--- a/css/media.css
+++ b/css/media.css
@@ -52,6 +52,12 @@
   }
 }
 
+@media only screen and (max-width: 660px) {
+  .accordeon_item_img {
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 615px) {
   .header_post_descr {
     left: 20px;
@@ -63,6 +69,22 @@
 
   .post_item_text {
     padding-bottom: 0;
+  }
+
+  .accordeon_item {
+    padding-left: 10px;
+  }
+
+  .accordeon_item_title {
+    margin-left: 28px;
+  }
+
+  .on_category_big {
+    margin-left: 5px;
+  }
+
+  .accordeon_arrow {
+    right: 15px;
   }
 }
 
@@ -77,5 +99,99 @@
 
   .header_post_text {
     font-size: 13px;
+  }
+
+  .people_img {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 555px) {
+  .accordeon_arrow {
+    right: 5px;
+  }
+}
+
+@media only screen and (max-width: 510px) {
+  .header_post_title {
+    max-width: 370px;
+  }
+
+  .accordeon_item {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    height: 40px;
+  }
+
+  .header_post_info:after {
+    height: 6px;
+  }
+
+  .accordeon_item_title {
+    margin-left: 35px;
+  }
+
+  .accordeon_arrow {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .header_post_text {
+    max-width: 390px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .header_post_title {
+    font-size: 24px;
+  }
+
+  .header_post_text {
+    max-width: 400px;
+  }
+
+  .accordeon_item {
+    padding: 10px 5px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .header_post_title {
+    max-width: 250px;
+  }
+
+  .header_post_text {
+    max-width: 310px;
+  }
+
+  .accordeon_item_text {
+    max-width: 390px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .accordeon_item_text {
+    max-width: 300px;
+  }
+}
+
+@media only screen and (max-width: 382px) {
+  .post_info_big {
+    margin-top: 40px;
+  }
+}
+
+@media only screen and (max-width: 374px) {
+  .header_post {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 370px) {
+  .accordeon_item.active .accordeon_item_title {
+    max-width: 300px;
   }
 }
