--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,5 +1,6 @@
 body
 	background: #2e2e30
+	min-width: 320px
 
 .header
 	margin-top: 30px
@@ -313,6 +314,7 @@ body
 	line-height: 26px
 	margin: 0
 	margin-top: 25px
+	z-index: 10
 	&.title_sm
 		max-width: 265px
 
@@ -323,6 +325,7 @@ body
 	font-weight: 400
 	line-height: 26px
 	margin-bottom: 15px
+	z-index: 10
 	&.text_sm
 		max-width: 265px
 
@@ -485,6 +488,7 @@ body
 	width: 721px
 	height: 420px
 	background: #fff
+	margin-bottom: 35px
 	overflow: hidden
 
 .accordeon_item
