--- a/css/media.css
+++ b/css/media.css
@@ -156,6 +156,26 @@
   .accordeon_item {
     padding: 10px 5px;
   }
+
+  .load_more {
+    margin-bottom: 30px;
+  }
+
+  .footer_info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: column-reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .social {
+    margin-bottom: 10px;
+  }
 }
 
 @media only screen and (max-width: 425px) {
@@ -193,5 +213,29 @@
 @media only screen and (max-width: 370px) {
   .accordeon_item.active .accordeon_item_title {
     max-width: 300px;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .news_post_link {
+    margin-left: 10px;
+  }
+
+  .news_post_comment {
+    margin-left: 10px;
+  }
+
+  .news_post_like .fa-heart-o {
+    margin-left: 10px;
+  }
+
+  .post_info_big {
+    margin-top: 10px;
+  }
+}
+
+@media only screen and (max-width: 340px) {
+  .post_descr_big {
+    margin-left: 20px;
   }
 }
