--- a/sass/media.sass
+++ b/sass/media.sass
@@ -95,6 +95,13 @@
 		max-width: 400px
 	.accordeon_item
 		padding: 10px 5px
+	.load_more
+		margin-bottom: 30px
+	.footer_info
+		flex-direction: column-reverse
+		align-items: center
+	.social
+		margin-bottom: 10px
 
 @media only screen and (max-width:425px)
 	.header_post_title
@@ -120,3 +127,16 @@
 @media only screen and (max-width:370px)
 	.accordeon_item.active .accordeon_item_title
 		max-width: 300px
+@media only screen and (max-width:350px)
+	.news_post_link
+		margin-left: 10px
+	.news_post_comment
+		margin-left: 10px
+	.news_post_like .fa-heart-o
+		margin-left: 10px
+	.post_info_big
+		margin-top: 10px
+@media only screen and (max-width:340px)
+	.post_descr_big
+		margin-left: 20px
+	
