--- a/sass/main.sass
+++ b/sass/main.sass
@@ -66,7 +66,7 @@ body
 	right: 10px
 	display: flex
 	flex-direction: column
-	z-index: 1
+	z-index: 20
 	& .nav_menu_link
 		padding: 30px 80px
 		font-size: 28px
@@ -390,6 +390,8 @@ body
 	align-items: flex-start
 	margin-left: 40px
 	max-height: 365px
+	padding-right: 10px
+
 
 .title_big 
 	max-width: 320px
