--- a/sass/media.sass
+++ b/sass/media.sass
@@ -127,6 +127,9 @@
 @media only screen and (max-width:370px)
 	.accordeon_item.active .accordeon_item_title
 		max-width: 300px
+	.economy
+		left: 80px
+
 @media only screen and (max-width:350px)
 	.news_post_link
 		margin-left: 10px
@@ -136,6 +139,7 @@
 		margin-left: 10px
 	.post_info_big
 		margin-top: 10px
+		
 @media only screen and (max-width:340px)
 	.post_descr_big
 		margin-left: 20px
